--- a/roles/DIWarfile/tasks/main.yml
+++ b/roles/DIWarfile/tasks/main.yml
@@ -5,7 +5,7 @@
 
 - name: Clone the tomcat repository
   git:
-    repo: "https://{{ username }}:{{ password }}@54.215.47.70/github.com/piajobelle/Ansible.git"
+    repo: "https://github.com/piajobelle/Ansible.git"
     dest: docker-folder
 
 - name: Download WAR file
