--- a/roles/DIWarfile/tasks/main.yml
+++ b/roles/DIWarfile/tasks/main.yml
@@ -5,7 +5,7 @@
 
 - name: Clone the tomcat repository
   git:
-    repo: "https://github.com/piajobelle/Ansible.git"
+    repo: "https://github.com/piajobelle/Tomcat.git"
     dest: docker-folder
 
 - name: Download WAR file
